Changes into full-path of kinto-http

--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-polyfill": "^6.22.0",
     "btoa": "^1.1.2",
-    "kinto-http": "nozbe/kinto-http.js#3a3e2d9597b72c9e3c4ed9a1cb2c62251bc1d009",
+    "kinto-http": "https://github.com/Nozbe/kinto-http.js#3a3e2d9597b72c9e3c4ed9a1cb2c62251bc1d009",
     "uuid": "^3.0.0"
   },
   "devDependencies": {
